--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@
                 <span class="alert-modal-close" onclick="hideTopPerformersModal()">&times;</span>
             </div>
             <div class="alert-modal-body">
-                <p class="text-muted mb-4">Top 3 rank participants across all competitions</p>
+                <p class="text-muted mb-4">Who will be the champions this year?</p>
                 <div id="topPerformersContainer" class="top-performers-grid">
                     <!-- Top performers will be populated here -->
                 </div>
