--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                             <!-- Winner Dashboard Content -->
                             <div id="winnerDashboardContent">
                                 <!-- Show Top Performers Button -->
-                                <div class="mb-4" id="topPerformersBtnContainer" style="display: none;">
+                                <div class="mb-4" id="topPerformersBtnContainer">
                                     <button type="button" class="btn btn-primary w-100 d-flex align-items-center justify-content-center gap-2 py-2" id="showTopPerformersBtn" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border: none; box-shadow: 0 3px 10px rgba(102, 126, 234, 0.25); font-size: 0.95rem;">
                                         <i class="fas fa-trophy fa-sm"></i>
                                         <span>Show Top Performers</span>
